--- a/Meowies/App.axaml
+++ b/Meowies/App.axaml
@@ -2,12 +2,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Meowies.App"
              xmlns:local="using:Meowies"
+             xmlns:views="using:Meowies.Views"
+             xmlns:viewmodels="using:Meowies.ViewModels"
              RequestedThemeVariant="Light">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
+    
+    <Application.Resources>
+        <DataTemplate DataType="{x:Type viewmodels:SearchViewModel}">
+            <views:SearchView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:BookmarksViewModel}">
+            <views:BookmarksView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:ChangeProfileViewModel}">
+            <views:ChangeProfileView />
+        </DataTemplate>
+    </Application.Resources>
   
     <Application.Styles>
         <FluentTheme />
