--- a/Meowies/Views/BookmarksView.axaml
+++ b/Meowies/Views/BookmarksView.axaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="Meowies.Views.FavouritesView"
+<UserControl x:Class="Meowies.Views.BookmarksView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
              d:DesignHeight="1600"
              d:DesignWidth="3200"
              x:CompileBindings="True"
-             x:DataType="vm:FavouritesViewModel"
+             x:DataType="vm:BookmarksViewModel"
              mc:Ignorable="d">
     
     
