--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -33,7 +33,7 @@
                         </Style>
                     </Grid.Styles>
                     
-                    <Button Grid.Column="0" Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
+                    <Button Grid.Column="0" CommandParameter="Meowies" Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
                             VerticalAlignment="Center" Margin="20 0 30 0"
                             Command="{Binding TrendingCommand}"/>
                     
@@ -41,30 +41,30 @@
                              Foreground="#742BEB" BorderThickness="2" BorderBrush="#DBBFFF" Margin="10 0"
                              Text="{Binding SearchName}"/>
                     
-                    <Button Grid.Column="2" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
-                            Background="Transparent" Command="{Binding SearchCommand}">
+                    <Button Grid.Column="2" CommandParameter="Search" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
+                            Background="Transparent" Command="{Binding UpdateViewCommand}">
                         <Image Source="../Assets/Icons/search.png" Width="30" Height="30"/>
                     </Button>
                     
-                    <Button Grid.Column="3" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
+                    <Button Grid.Column="3" CommandParameter="Random" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding RandomCommand}">
                         <Image Source="../Assets/Icons/dices.png" Width="40" Height="40"/>
                     </Button>
                     
-                    <Button Grid.Column="4" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
-                            Background="Transparent" Command="{Binding FavouritesCommand}">
+                    <Button Grid.Column="4" CommandParameter="Bookmarks" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
+                            Background="Transparent" Command="{Binding UpdateViewCommand}">
                         <Image Source="../Assets/Icons/heart.png" Width="30" Height="30"/>
                     </Button>
                     
-                    <Button Grid.Column="5" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
-                            Background="Transparent" Command="{Binding CatCommand}">
+                    <Button Grid.Column="5" CommandParameter="Profile" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
+                            Background="Transparent" Command="{Binding UpdateViewCommand}">
                         <Image Source="../Assets/Icons/cat.png" Width="40" Height="40"/>
                     </Button>
                     
                 </Grid>
             </StackPanel>
             <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4" ClipToBounds="True"/>
-            <TransitioningContentControl Content="{Binding CurrentPage}" />
+            <ContentControl Content="{Binding SelectedViewModel}" />
         </Grid>
         </Grid>
         
