--- a/Meowies/Views/FavouritesView.axaml
+++ b/Meowies/Views/FavouritesView.axaml
@@ -13,7 +13,7 @@
     
     
     <UserControl.Resources>
-        <DataTemplate x:Key="My.DataTemplates.BookmarkItem" DataType="models:BookmarkItem">
+        <DataTemplate x:Key="My.DataTemplates.BookmarkItem" DataType="models:MovieItem">
             <Grid Height="100" Width="500" ColumnDefinitions="Auto, *, Auto" HorizontalAlignment="Center">
                 <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2">
                     <Image Source="../Assets/Icons/cat.png" Height="100" Width="100" Stretch="UniformToFill"/>
@@ -42,7 +42,7 @@
     </UserControl.Resources>
 
     <UserControl.DataTemplates>
-        <DataTemplate DataType="models:BookmarkItem">
+        <DataTemplate DataType="models:MovieItem">
             <StackPanel Height="101" Margin="0 10 0 0 ">
                 <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.BookmarkItem}" />
             </StackPanel>
