--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -34,12 +34,11 @@
                     </Grid.Styles>
                     
                     <Button Grid.Column="0" Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
-                            VerticalAlignment="Center" Margin="20 0 30 0"
+                            VerticalAlignment="Center" Margin="20 0 220 0"
                             Command="{Binding TrendingCommand}"/>
                     
-                    <TextBox Grid.Column="1" Width="320" Watermark="Search" CornerRadius="15" VerticalAlignment="Center"
-                             Foreground="#742BEB" BorderThickness="2" BorderBrush="#DBBFFF" Margin="10 0"
-                             Text="{Binding SearchName}"/>
+                    <TextBlock Grid.Column="1" Text="Search a movie" Foreground="#B57CFF" FontSize="20" 
+                               VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5 0"/>
                     
                     <Button Grid.Column="2" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding SearchCommand}">
