--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -34,11 +34,16 @@
                     </Grid.Styles>
                     
                     <Button Grid.Column="0" Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
-                            VerticalAlignment="Center" Margin="20 0 220 0"
+                            VerticalAlignment="Center" Margin="20 0 170 0"
                             Command="{Binding TrendingCommand}"/>
                     
-                    <TextBlock Grid.Column="1" Text="Search a movie" Foreground="#B57CFF" FontSize="20" 
-                               VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5 0"/>
+                    
+                    <Button Grid.Column="1" HorizontalAlignment="Right" Height="40" VerticalAlignment="Center" 
+                            VerticalContentAlignment="Center" FontSize="20" Foreground="#B57CFF"
+                            Background="Transparent" Command="{Binding SearchCommand}"
+                            Content="Search for a movie" Margin="5 0"/>
+                    
+
                     
                     <Button Grid.Column="2" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding SearchCommand}">
