--- a/Meowies/Views/FavouritesView.axaml
+++ b/Meowies/Views/FavouritesView.axaml
@@ -13,23 +13,23 @@
     
     
     <UserControl.Resources>
-        <DataTemplate x:Key="My.DataTemplates.BookmarkItem" DataType="models:MovieItem">
+        <DataTemplate x:Key="My.DataTemplates.MovieItemDoc" DataType="models:MovieItemDoc">
             <Grid Height="100" Width="500" ColumnDefinitions="Auto, *, Auto" HorizontalAlignment="Center">
                 <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2">
                     <Image Source="../Assets/Icons/cat.png" Height="100" Width="100" Stretch="UniformToFill"/>
                 </Border>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
-                    <TextBlock Text="{Binding docs[0].alternativeName}" Foreground="#5822B1"
+                    <TextBlock Text="{Binding alternativeName}" Foreground="#5822B1"
                                FontSize="20" VerticalAlignment="Center" Margin="9"/>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Foreground="#B57CFF" Margin="9" FontSize="20">
-                            <Run Text="{Binding docs[0].genres[0].name}"/>
+                            <Run Text="{Binding genres[0].name}"/>
                             <Run Text=","/>
-                            <Run Text="{Binding docs[0].genres[1].name}"/>
+                            <Run Text="{Binding genres[1].name}"/>
                         </TextBlock>
-                        <TextBlock Text="{Binding docs[0].rating.kp}" Foreground="#7D4192" 
+                        <TextBlock Text="{Binding rating.kp}" Foreground="#7D4192" 
                                    Margin="9" FontSize="20"/>
-                        <TextBlock Text="{Binding docs[0].ageRating}" Foreground="#B57CFF" 
+                        <TextBlock Text="{Binding ageRating}" Foreground="#B57CFF" 
                                    Margin="9" FontSize="20"/>
                     </StackPanel>
                 </StackPanel>
@@ -42,9 +42,9 @@
     </UserControl.Resources>
 
     <UserControl.DataTemplates>
-        <DataTemplate DataType="models:MovieItem">
+        <DataTemplate DataType="models:MovieItemDoc">
             <StackPanel Height="101" Margin="0 10 0 0 ">
-                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.BookmarkItem}" />
+                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.MovieItemDoc}" />
             </StackPanel>
         </DataTemplate>
     </UserControl.DataTemplates>
