--- a/Meowies/Views/BookmarksView.axaml
+++ b/Meowies/Views/BookmarksView.axaml
@@ -18,7 +18,7 @@
                 <Grid.Styles>
                     <Style Selector="Button:pointerover /template/ ContentPresenter">
                         <Setter Property="Background" Value="Transparent"/>
-                        <Setter Property="RenderTransform" Value="scale(1.06)"/>
+                        <Setter Property="RenderTransform" Value="scale(1.16)"/>
                         <Setter Property="Foreground" Value="#C69AFF"></Setter>
                     </Style>
                 </Grid.Styles>
@@ -56,11 +56,12 @@
         <DataTemplate DataType="models:MovieItemDoc">
             <StackPanel Height="101" Margin="0 10 0 0 ">
                 <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.MovieItemDoc}" />
+                
             </StackPanel>
         </DataTemplate>
     </UserControl.DataTemplates>
 
-    <Grid Height="750" RowDefinitions="50, 50, 500, 150">
+    <Grid Height="750" RowDefinitions="100, 500, 150">
         <Grid.Styles>
             <Style Selector="Button:pointerover /template/ ContentPresenter">
                 <Setter Property="Background" Value="Transparent"/>
@@ -68,18 +69,14 @@
                 <Setter Property="Foreground" Value="#C69AFF"/>
             </Style>
         </Grid.Styles>
-        <Button Grid.Row="0" Margin="5" Command="{Binding RefreshPageCommand}"
-                Background="Transparent" Height="40" Width="40">
-            <Image Source="../Assets/Icons/refresh.png" Height="40" Width="40"/>
-        </Button>
-        <TextBlock Grid.Row="1" Text="Bookmarks!" Foreground="#B57CFF" FontSize="35" Margin="10" 
+        <TextBlock Grid.Row="0" Text="Bookmarks!" Foreground="#B57CFF" FontSize="35" Margin="0 46 0 10" 
                    HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <ScrollViewer Grid.Row="2" Height="500">
+        <ScrollViewer Grid.Row="1" Height="500">
             <ListBox ItemsSource="{Binding Bookmarks}" Background="White"
                      SelectionMode="Single" Name="ListBox" />
                      <!--SelectionChanged="ListBox_OnSelectionChanged"/>-->
         </ScrollViewer>
-        <Image Grid.Row="3" Source="../Assets/Icons/cat with butterfly.png" Height="150" Width="150" Stretch="Uniform" 
+        <Image Grid.Row="2" Source="../Assets/Icons/cat with butterfly.png" Height="150" Width="150" Stretch="Uniform" 
                Margin="0 50 500 0 "/>
     </Grid>
 </UserControl>
