--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:Meowies.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="900"
         x:Class="Meowies.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/Icons/paw.png"
@@ -21,53 +21,57 @@
         <Grid>
             <Image Source="../Assets/paws.png" Height="500" Width="500" Margin="0 400 1100 0"/>
             <Image Source="../Assets/paws.png" Height="500" Width="500" Margin="1300 0 0 200"/>
-            <Grid Margin="10" Background="White" Width="850">
-            <StackPanel Background="White" VerticalAlignment="Top" Height="60" Width="850" Orientation="Horizontal" 
-                        HorizontalAlignment="Center">
-                <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto, Auto">
-                    <Grid.Styles>
-                        <Style Selector="Button:pointerover /template/ ContentPresenter">
-                            <Setter Property="Background" Value="Transparent"/>
-                            <Setter Property="RenderTransform" Value="scale(1.06)"/>
-                            <Setter Property="Foreground" Value="#C69AFF"></Setter>
-                        </Style>
-                    </Grid.Styles>
+            
+            <Grid Margin="10" Background="White" Width="850" Height="860">
+                <Grid.Styles>
+                    <Style Selector="Button:pointerover /template/ ContentPresenter">
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="RenderTransform" Value="scale(1.06)"/>
+                        <Setter Property="Foreground" Value="#C69AFF"></Setter>
+                    </Style>
+                </Grid.Styles>
+                <Grid>
+                    <StackPanel VerticalAlignment="Top" Height="60" Width="850" Orientation="Horizontal" 
+                            HorizontalAlignment="Center"
+                            Background="White">
                     
-                    <Button Grid.Column="0" Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
+                    
+                    <Button Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
                             VerticalAlignment="Center" Margin="20 0 170 0"
                             Command="{Binding TrendingCommand}"/>
                     
                     
-                    <Button Grid.Column="1" HorizontalAlignment="Right" Height="40" VerticalAlignment="Center" 
+                    <Button HorizontalAlignment="Right" Height="40" VerticalAlignment="Center" 
                             VerticalContentAlignment="Center" FontSize="20" Foreground="#B57CFF"
                             Background="Transparent" Command="{Binding SearchCommand}"
                             Content="Search for a movie" Margin="5 0"/>
                     
                     
-                    <Button Grid.Column="2" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
+                    <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding SearchCommand}">
                         <Image Source="../Assets/Icons/search.png" Width="30" Height="30"/>
                     </Button>
                     
-                    <Button Grid.Column="3" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
+                    <Button HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding RandomCommand}">
                         <Image Source="../Assets/Icons/dices.png" Width="40" Height="40"/>
                     </Button>
                     
-                    <Button Grid.Column="4" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
+                    <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding BookmarksCommand}">
                         <Image Source="../Assets/Icons/heart.png" Width="30" Height="30"/>
                     </Button>
                     
-                    <Button Grid.Column="5" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
+                    <Button HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding CatCommand}">
                         <Image Source="../Assets/Icons/cat.png" Width="40" Height="40"/>
                     </Button>
-                    
-                </Grid>
             </StackPanel>
+            </Grid>
+                
             <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4" ClipToBounds="True"/>
-            <TransitioningContentControl Content="{Binding CurrentPage}" />
+            <TransitioningContentControl Content="{Binding CurrentPage}" 
+                                         Width="850" Height="800"/>
         </Grid>
         </Grid>
         
