--- a/Meowies/Views/SearchView.axaml
+++ b/Meowies/Views/SearchView.axaml
@@ -5,8 +5,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:Meowies.ViewModels"
              xmlns:models="clr-namespace:Meowies.Models"
-             d:DesignHeight="1600"
-             d:DesignWidth="3200"
+             d:DesignHeight="900"
+             d:DesignWidth="900"
              x:CompileBindings="True"
              x:DataType="vm:SearchViewModel"
              mc:Ignorable="d">
@@ -138,7 +138,7 @@
         </DataTemplate>
     </UserControl.DataTemplates>
 
-    <Grid Height="750" ClipToBounds="True" RowDefinitions="50, Auto">
+    <Grid Height="750" ClipToBounds="True" RowDefinitions="70, Auto">
         <Grid.Styles>
             <Style Selector="Button:pointerover /template/ ContentPresenter">
                 <Setter Property="Background" Value="Transparent"/>
@@ -148,7 +148,7 @@
         </Grid.Styles>
         
         <Grid Grid.Row="0" IsVisible="{Binding IsSearchVisible}" Height="50"
-              VerticalAlignment="Top">
+              VerticalAlignment="Top" Margin="0 15">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                 <TextBlock FontSize="20" Foreground="#B57CFF"
                            VerticalAlignment="Center">
@@ -164,7 +164,7 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1" Height="700" IsVisible="{Binding IsStartVisible}">
+        <Grid Grid.Row="1" IsVisible="{Binding IsStartVisible}" Margin="0 200">
             <Image Height="300" Width="300" VerticalAlignment="Bottom" HorizontalAlignment="Center"
                    Source="../Assets/Icons/play-with-pet.png" Stretch="Uniform"/>    
         </Grid>
@@ -188,7 +188,7 @@
         <Grid Grid.Row="1" IsVisible="{Binding IsResultVisible}" RowDefinitions="90, *, 150">
             <TextBlock Grid.Row="0" Text="{Binding SearchResults}" Foreground="#742BEB" FontSize="35" Margin="15" 
                        HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-            <Grid Grid.Row="1" ColumnDefinitions="*, *" Height="500">
+            <Grid Grid.Row="1" ColumnDefinitions="*, *" Height="450">
                 <ListBox Grid.Column="0" ItemsSource="{Binding Movies}" Background="White"/>
                 <ListBox Grid.Column="1" ItemsSource="{Binding Actors}" Background="White"/>
             </Grid>
