--- a/Meowies/Views/TrendingView.axaml
+++ b/Meowies/Views/TrendingView.axaml
@@ -4,15 +4,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:Meowies.ViewModels"
-             d:DesignHeight="800"
-             d:DesignWidth="800"
+             d:DesignHeight="900"
+             d:DesignWidth="900"
              x:CompileBindings="True"
              x:DataType="vm:TrendingViewModel"
              mc:Ignorable="d">
     
     <Grid Background="Transparent" Width="850" HorizontalAlignment="Center" VerticalAlignment="Center"
-          RowDefinitions="380, 70, 70, 180, 30, 35">
-        <Image Grid.Row="0" Source="../Assets/boy and a bird.jpg" Width="850" Stretch="UniformToFill"/>
+          RowDefinitions="380, 70, 70, 180, 30, 35" Height="800">
+        <Image Grid.Row="0" Source="../Assets/boy and a bird.jpg" Width="850" Stretch="UniformToFill" Height="334" 
+               Margin="0 46 0 0"/>
         <TextBlock Grid.Row="1" FontSize="40" Text="Смотрите в кинотеатрах:" Foreground="#B57CFF"
                    HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Bottom"/>
         <TextBlock Grid.Row="2" Text="{Binding Bookmark.alternativeName}" 
