--- a/Meowies/Views/SearchView.axaml
+++ b/Meowies/Views/SearchView.axaml
@@ -82,13 +82,19 @@
         </DataTemplate>
         <DataTemplate x:Key="My.DataTemplates.ActorMovie" DataType="models:ActorMovie">
             <Grid>
+                <Button Content="{Binding alternativeName}" Foreground="#B5ACFF"
+                        FontSize="15" HorizontalAlignment="Center" HorizontalContentAlignment="Center"
+                        Command="{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).MovieSearchSwitch}" 
+                        CommandParameter="{Binding id}"
+                        Margin="0 0 0 12" Background="Transparent"/>
                 <Button Content="{Binding name}" Foreground="#B57CFF"
                         FontSize="20" HorizontalAlignment="Center" HorizontalContentAlignment="Center"
                         Command="{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).MovieSearchSwitch}" 
                         CommandParameter="{Binding id}"
-                        Margin="0 5" Background="Transparent"/>
-                <TextBlock Text="{Binding alternativeName}"
-                           FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#B58CFA"/>
+                        Margin="0 12 0 0" Background="Transparent"/>
+                
+                <!--<TextBlock Text="{Binding alternativeName}"
+                           FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#B58CFA"/>-->
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="My.DataTemplates.Fact" DataType="models:Fact">
@@ -99,13 +105,16 @@
         </DataTemplate>
         <DataTemplate x:Key="My.DataTemplates.Person" DataType="models:Person">
             <Grid>
+                <Button Content="{Binding enName}" Foreground="#B5ACFF"
+                        FontSize="15" HorizontalAlignment="Center" HorizontalContentAlignment="Center"
+                        Command="{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).ActorSearchSwitch}" 
+                        CommandParameter="{Binding id}"
+                        Margin="0 0 0 12" Background="Transparent"/>
                 <Button Content="{Binding name}" Foreground="#B57CFF"
                         FontSize="20" HorizontalAlignment="Center" HorizontalContentAlignment="Center"
                         Command="{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).ActorSearchSwitch}" 
                         CommandParameter="{Binding id}"
-                        Margin="0 5" Background="Transparent"/>
-                <TextBlock Text="{Binding enName}"
-                           FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#B58CFA"/>
+                        Margin="0 12 0 0" Background="Transparent"/>
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
