--- a/Meowies/Views/ChangeProfileView.axaml
+++ b/Meowies/Views/ChangeProfileView.axaml
@@ -10,7 +10,7 @@
              x:DataType="vm:ChangeProfileViewModel"
              mc:Ignorable="d">
     <Grid>
-        <Grid IsVisible="{Binding !Entered}" Height="750">
+        <Grid IsVisible="{Binding Entered}" Height="750">
             <Grid.Styles>
                 <Style Selector="Button:pointerover /template/ ContentPresenter">
                     <Setter Property="Background" Value="Transparent"/>
@@ -32,7 +32,7 @@
             </StackPanel>
         </Grid>
         <Grid RowDefinitions="45, 100, 45, 80, 80, 80, 80, 220" Height="700" VerticalAlignment="Center" Width="800"
-              IsVisible="{Binding Entered}">
+              IsVisible="{Binding ProfileChanging}">
             <Grid.Styles>
                 <Style Selector="Button:pointerover /template/ ContentPresenter">
                     <Setter Property="Background" Value="Transparent"/>
@@ -42,12 +42,17 @@
             </Grid.Styles>
             <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
                 <Button HorizontalAlignment="Left" Width="40" Height="40" VerticalAlignment="Center" Margin="10 0"
-                        Background="Transparent" Command="{Binding GoBackCommand}">
+                        Background="Transparent" Command="{Binding GoBackToWelcomeCommand}">
                     <Image Source="../Assets/Icons/left-arrow.png" Width="40" Height="40" Stretch="Uniform"/>
                 </Button>
                 <Button Height="45" VerticalContentAlignment="Center"  VerticalAlignment="Center" Margin="10 0"
-                        Background="Transparent" Command="{Binding GoBackCommand}"
+                        Background="Transparent" Command="{Binding GoBackToWelcomeCommand}"
                         FontSize="20" Content="Return" Foreground="#B57CFF"/>
+                <Button Margin="550 30 0 0" Background="Transparent" Height="65"
+                        Command="{Binding StartPicChangingCommand}">
+                    <Image HorizontalAlignment="Right" Width="60" Height="60"
+                           Source="{Binding Pic}"/>
+                </Button>
             </StackPanel>
                 
             <TextBlock Grid.Row="1" FontSize="50" HorizontalAlignment="Center">
@@ -142,5 +147,72 @@
             <Image Grid.Row="7" Source="../Assets/Icons/playing cat.png" Width="200" Height="200" HorizontalAlignment="Left"
                    VerticalAlignment="Bottom" Margin="40 0"/>
         </Grid>
+        
+        
+        
+        
+        <Grid RowDefinitions="45, 150, Auto" IsVisible="{Binding PicChanging}"
+              Height="700">
+            <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
+                <Button HorizontalAlignment="Left" Width="40" Height="40" VerticalAlignment="Center" Margin="10 0"
+                        Background="Transparent" Command="{Binding GoBackToProfileCommand}">
+                    <Image Source="../Assets/Icons/left-arrow.png" Width="40" Height="40" Stretch="Uniform"/>
+                </Button>
+                <Button Height="45" VerticalContentAlignment="Center"  VerticalAlignment="Center" Margin="10 0"
+                        Background="Transparent" Command="{Binding GoBackToProfileCommand}"
+                        FontSize="20" Content="Return" Foreground="#B57CFF"/>
+            </StackPanel>
+            <TextBlock Grid.Row="1" Foreground="#B57CFF" Text="Wish to switch profile picture? Pick one below!"
+                       FontSize="40" Width="600" TextWrapping="Wrap" Height="100" TextAlignment="Center"
+                       Margin="0 0 0 40"/>
+            <StackPanel Grid.Row="2" Orientation="Vertical" HorizontalAlignment="Center">
+                <StackPanel Orientation="Horizontal">
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="1"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic1.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="2"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic2.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="3"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic3.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="4"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic4.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="5"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic5.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="6"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic6.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="7"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic7.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                    <Button Command="{Binding SwitchPicture}" CommandParameter="8"
+                            Background="Transparent">
+                        <Image Source="../Assets/Userpics/userpic8.png" Height="100" Width="100" Stretch="UniformToFill"
+                               Margin="10"/>
+                    </Button>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
     </Grid>
+    
+    
 </UserControl>
